# preflight

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  justfile
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: block-docs-git-add.sh  check-before-pr.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  main.yml  release.yml
crates/preflight-core/: Cargo.toml
crates/preflight-core/src/: diff.rs  file_reader.rs  git_diff.rs  highlight.rs  interdiff.rs  json_store.rs  lib.rs  parser.rs  review.rs  store.rs  ws.rs
crates/preflight-mcp/: Cargo.toml
crates/preflight-mcp/src/: client.rs  lib.rs  server.rs
crates/preflight-mcp/tests/: client_test.rs  integration_test.rs
crates/preflight-server/: Cargo.toml
crates/preflight-server/src/: error.rs  lib.rs  main.rs  state.rs  types.rs  ws.rs
crates/preflight-server/src/routes/: comments.rs  files.rs  mod.rs  reviews.rs  revisions.rs  threads.rs
crates/preflight-server/tests/: helpers.rs  ws_connection.rs  ws_events.rs
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: ConfirmDialog.svelte  ConnectionStatus.svelte  DiffView.svelte  FileTree.svelte  InlineCommentForm.svelte  ResizeHandle.svelte  ReviewList.svelte  ReviewView.svelte  RevisionTimeline.svelte  ThreadPanel.svelte  TreeNode.svelte
frontend/src/components/__tests__/: ConnectionStatus.test.ts  DiffView.test.ts  FileTree.test.ts  InlineCommentForm.test.ts  ResizeHandle.test.ts  ReviewList.test.ts  ReviewView.test.ts  ThreadPanel.test.ts
frontend/src/lib/: api.ts  buildFileTree.ts  markdown.ts  router.svelte.ts  types.ts  ws.ts
frontend/src/lib/__tests__/: buildFileTree.test.ts  markdown.test.ts  ws.test.ts
plugin/: .mcp.json
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/agents/: review-agent.md
plugin/commands/: preflight.md  review.md
scripts/: scenario.ts
