[workspace]
resolver = "2"
members = [
    "crates/preflight-core",
    "crates/preflight-server",
    "crates/preflight-mcp",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
syntect = { version = "5.3.0", default-features = false, features = ["html", "parsing", "dump-load", "regex-onig"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-onig"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "0.14.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
similar = "2.7.0"
