[package]
name = "preflight-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
syntect = { workspace = true }
two-face = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = "3.25.0"
