[package]
name = "preflight-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
preflight-core = { path = "../preflight-core" }
reqwest = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1.3"
