[package]
name = "preflight-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
preflight-core = { path = "../preflight-core" }
chrono = { workspace = true }
futures-util = "0.3.31"
reqwest = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.28.0"
urlencoding = "2.1.3"

[dev-dependencies]
axum = "0.8.8"
preflight-server = { path = "../preflight-server" }
tempfile = "3.25.0"
