[package]
name = "preflight-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
preflight-core = { path = "../preflight-core" }
async-trait = { workspace = true }
axum = "0.8.8"
chrono = { workspace = true }
mime_guess = "2.0.5"
rust-embed = "8.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { workspace = true }
