[package]
name = "preflight-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
preflight-core = { path = "../preflight-core" }
preflight-mcp = { path = "../preflight-mcp" }
async-trait = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true }
axum = "0.8.8"
chrono = { workspace = true }
mime_guess = "2.0.5"
rust-embed = "8.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { workspace = true }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.24.0"
tower = "0.5.3"
